update docker-compose, ingerate email server

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 SECRET_KEY="django-insecure-*+k7sbdrq^5ig@y@fhjgp-p&bs-t#sx3$ua40tg_i9_be=(kd9"
 DEBUG="False"
-EMAIL_HOST_USER="alaaelgharably1@gmail.com"
-EMAIL_HOST_PASSWORD="lmos nsjm fbau yfsn"
+EMAIL_HOST_USER="admin@cr-ai.cloud"
+EMAIL_HOST_PASSWORD="CRai@147852369"
+DEFAULT_FROM_EMAIL="admin@cr-ai.cloud"
